<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_rounded_input"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/equipment_img" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvGallons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_to_gal"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>